--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ zookeeper:
   hostname: zookeeper
 
 mesosmaster:
-  image: mesosphere/mesos-modules-dev:0.27.1
+  image: mesosphere/mesos-master:0.28.0-2.0.16.ubuntu1404
   hostname: mesosmaster
   command: /mesos/build/bin/mesos-master.sh
   environment:
@@ -45,7 +45,7 @@ slave:
    - 192.168.255.254
 
 marathon:
-  image: mesosphere/marathon:v0.14.0
+  image: mesosphere/marathon:v0.15.0
   environment:
     - MARATHON_MASTER=zk://zookeeper:2181/mesos
     - MARATHON_ZK=zk://zookeeper:2181/marathon
