Cleaned up dockerfile build, switched to use new label injection, aand use marathon with network conf

--- a/cni/conf/test.conf
+++ b/cni/conf/test.conf
@@ -6,5 +6,6 @@
     },
     "etcd_authority": "etcd:2379",
     "log_level": "DEBUG",
-    "log_level_stderr": "DEBUG"
+    "log_level_stderr": "DEBUG",
+    "metadata": {}
 }
