Update to use labels in core mesos

--- a/cni/conf/test.conf
+++ b/cni/conf/test.conf
@@ -6,6 +6,5 @@
     },
     "etcd_authority": "etcd:2379",
     "log_level": "DEBUG",
-    "log_level_stderr": "DEBUG",
-    "metadata": {}
+    "log_level_stderr": "DEBUG"
 }
